fixed admin settings visibility

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -137,6 +137,7 @@ h3 {
 }
 
 .img-description {
+  padding: 20px;
   text-align: justify;
   text-justify: auto;
 }
